Revert "Fix Love Match: compat section uses .is-visible class to override inline display:none"
This reverts commit db282b453d7c980c5dfb8784482978723d4b796e.

--- a/bazi-destiny/css/style.css
+++ b/bazi-destiny/css/style.css
@@ -1097,11 +1097,7 @@ input[type="date"]::-webkit-calendar-picker-indicator:hover {
 .compat-section {
   min-height: 100vh;
   padding: 120px 24px 80px;
-  display: none;
-}
-.compat-section.is-visible {
   display: flex;
-}
   justify-content: center;
 }
 .compat-inner {
